# modern_cpp_template

./: .all-contributorsrc  .clang-format  .clang-tidy  .codecov.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierignore  .pylintrc  .remarkrc  .style.yapf  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  INSTALL.md  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  TODO_CMakePresets.json.backup  pylintrc
.cache/clangd/index/: fuzz_tester.cpp.EB1AA66D90229815.idx  sample_library.cpp.EE1E51E70D43A08E.idx  tests.cpp.0EE4B044E08F7F55.idx
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.html  CONTRIBUTORS.md  SECURITY.md
.github/actions/setup_cache/: action.yml
.github/template/: README.md  template_name  template_repository
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  codeql_analysis.yml  template_cleanup.yml  verify-clang-format.yml
benchmark/: CMakeLists.txt  benchmark_main.cpp  bm_fibonacci.cpp
cmake/: AddTargets.cmake  CCache.cmake  CPM.cmake  CompilerSettings.cmake  CompilerWarnings.cmake  Cuda.cmake  Dependencies.cmake  Doxygen.cmake  FindPFM.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Profiling.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  _FORTIFY_SOURCE.hpp
configured_files/: CMakeLists.txt  modern_cpp_template_config.h.in  myproject_config.h.in
docs/: mainpage.md
docs/doxygen_custom/: custom_alternative.css  custom_header.html
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/: CMakeLists.txt
include/modern_cpp_template/: CMakeLists.txt  binary_exponentiation.h  compiler_macros.h  factorial.h  fibonacci.h  macros.h  modern_cpp_template_asserts.h  system_constants.h  undirected_graph.h
include/myproject/: CMakeLists.txt  binary_exponentiation.h  breadth_first_search_unordered.h  compiler_macros.h  factorial.h  fibonacci.h  macros.h  myproject_asserts.h  system_constants.h  undirected_graph.h
src/sample_app/: CMakeLists.txt  sample_app.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  factorial.cpp  factorial_test.cpp  fibonacci_test.cpp  test_binary_exponentiation.cpp  test_breadth_first_search_unordered.cpp  test_factorial.cpp  test_fibonacci.cpp  tests.cpp
tools/: requirements-dev.txt
tools/scripts/: .clang-format-ignore  .clang-format-include  run_clang_format.py
